[gd_scene load_steps=4 format=3 uid="uid://d2rbfsfprmshc"]

[ext_resource type="Script" uid="uid://bqyltdj3lrthg" path="res://player.gd" id="1_51jd6"]
[ext_resource type="Texture2D" uid="uid://bcgfvs3fwj2t1" path="res://icon.svg" id="2_uapwn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5odhx"]
size = Vector2(129, 128)

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_51jd6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_uapwn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_5odhx")

[node name="ShieldTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="ShieldTimer" to="." method="_on_shield_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
